[MT] make auth control suitable for mt